--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,74 @@
-home
+<div
+  class="card mx-auto mt-5"
+  style="max-width: 50rem; cursor: pointer"
+  [routerLink]="'/drinks/' + featuredDrink.id"
+>
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img
+        [src]="featuredDrink.image"
+        [alt]="featuredDrink.name"
+        class="img-fluid rounded-start"
+        *ngIf="featuredDrink.image"
+      />
+    </div>
+    <div class="col-md-8">
+      <div class="card-body h-100 d-flex flex-column justify-content-between">
+        <div>
+          <p class="card-text h5 text-muted" style="letter-spacing: 0.1em">
+            Today's featured drink
+          </p>
+          <h5 class="display-4 card-title">{{ featuredDrink.name }}</h5>
+        </div>
+        <p class="card-text lead">
+          {{ featuredDrink.category }}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<nav class="mt-5">
+  <ul class="pagination justify-content-center">
+    <li
+      class="page-item"
+      [class.active]="letter.toLowerCase() === firstLetter.toLowerCase()"
+      *ngFor="let letter of paginationLetters"
+    >
+      <a
+        class="page-link"
+        style="cursor: pointer"
+        (click)="getDrinksByFirstLetter(letter)"
+        >{{ letter }}</a
+      >
+    </li>
+  </ul>
+</nav>
+
+<div class="mt-5">
+  <p class="text-muted">{{ drinks.length }} drinks found</p>
+</div>
+
+<div class="row mt-5">
+  <div class="col-12" *ngIf="drinks.length === 0">
+    <p class="lead text-center">No drinks found</p>
+  </div>
+
+  <div class="col-3 mb-4" *ngFor="let drink of drinks">
+    <div
+      class="card"
+      style="width: 18rem; cursor: pointer"
+      [routerLink]="'/drinks/' + drink.id"
+    >
+      <img [src]="drink.image" class="card-img-top" [alt]="drink.name" />
+      <div class="card-body">
+        <p class="card-text">
+          {{ drink.name }}
+        </p>
+      </div>
+      <div class="card-footer text-muted" *ngIf="drink.category">
+        {{ drink.category }}
+      </div>
+    </div>
+  </div>
+</div>
