--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<main class="container">
-  <router-outlet></router-outlet>
-</main>
+<block-ui>
+  <main class="container">
+    <router-outlet></router-outlet>
+  </main>
+</block-ui>
