--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -46,30 +46,8 @@
   </ul>
 </nav>
 
-<div class="mt-5">
+<div class="my-5">
   <p class="text-muted">{{ drinks.length }} drinks found</p>
 </div>
 
-<div class="row mt-5">
-  <div class="col-12" *ngIf="drinks.length === 0">
-    <p class="lead text-center">No drinks found</p>
-  </div>
-
-  <div class="col-3 mb-4" *ngFor="let drink of drinks">
-    <div
-      class="card"
-      style="width: 18rem; cursor: pointer"
-      [routerLink]="'/drinks/' + drink.id"
-    >
-      <img [src]="drink.image" class="card-img-top" [alt]="drink.name" />
-      <div class="card-body">
-        <p class="card-text">
-          {{ drink.name }}
-        </p>
-      </div>
-      <div class="card-footer text-muted" *ngIf="drink.category">
-        {{ drink.category }}
-      </div>
-    </div>
-  </div>
-</div>
+<app-drink-list [drinks]="drinks"></app-drink-list>
