Added router link to featured drink

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,8 @@
-<div class="card mx-auto" style="max-width: 45rem">
+<div
+  class="card mx-auto"
+  style="max-width: 45rem; cursor: pointer"
+  [routerLink]="'/drinks/' + featuredDrink.id"
+>
   <div class="card-header">
     <p class="h3">Today's featured cocktail</p>
   </div>
