--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
 </div>
 
 <nav class="my-5">
-  <ul class="pagination justify-content-center">
+  <ul class="pagination flex-wrap justify-content-center">
     <li
       class="page-item"
       [class.active]="letter.toLowerCase() === firstLetter.toLowerCase()"
