Added number of results to search page

--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -14,4 +14,8 @@
   <button type="submit" class="btn btn-primary">Search</button>
 </form>
 
+<div class="my-5" *ngIf="drinks">
+  <p class="text-muted">{{ drinks.length }} drinks found</p>
+</div>
+
 <app-drink-list [drinks]="drinks"></app-drink-list>
