Added hover effect some cards

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div
-  class="card mx-auto"
+  class="card mx-auto hoverable"
   style="max-width: 45rem; cursor: pointer"
   [routerLink]="'/drinks/' + featuredDrink.id"
 >
