--- a/src/app/shared/drink-list/drink-list.component.html
+++ b/src/app/shared/drink-list/drink-list.component.html
@@ -4,7 +4,7 @@
     *ngFor="let drink of drinks"
   >
     <div
-      class="card mx-auto"
+      class="card mx-auto hoverable"
       style="max-width: 20rem; cursor: pointer"
       [routerLink]="'/drinks/' + drink.id"
     >
