--- a/src/app/pages/ingredient/ingredient.component.html
+++ b/src/app/pages/ingredient/ingredient.component.html
@@ -1,39 +1,43 @@
-<div class="card mx-auto mb-5">
-  <div class="card-header">
-    <h3>{{ ingredientDetails.name }}</h3>
-  </div>
-  <div class="card-body row">
-    <div class="col-md-4">
-      <img
-        [src]="ingredientDetails.image"
-        [alt]="ingredientDetails.name"
-        class="img-fluid rounded"
-      />
+<h1 *ngIf="emptyResult" class="text-center display-3">No ingredient found</h1>
+
+<div *ngIf="!emptyResult">
+  <div class="card mx-auto mb-5">
+    <div class="card-header">
+      <h3>{{ ingredientDetails.name }}</h3>
     </div>
-    <div class="col-md-8">
-      <div class="card-body h-100 d-flex flex-column justify-content-between">
-        <p class="card-text">
-          {{ ingredientDetails.description || "No description available" }}
-        </p>
+    <div class="card-body row">
+      <div class="col-md-4">
+        <img
+          [src]="ingredientDetails.image"
+          [alt]="ingredientDetails.name"
+          class="img-fluid rounded"
+        />
+      </div>
+      <div class="col-md-8">
+        <div class="card-body h-100 d-flex flex-column justify-content-between">
+          <p class="card-text">
+            {{ ingredientDetails.description || "No description available" }}
+          </p>
+        </div>
       </div>
     </div>
+    <div
+      class="card-footer d-flex gap-5 justify-content-evenly"
+      *ngIf="ingredientDetails.type || ingredientDetails.alcohol"
+    >
+      <small>
+        <span class="fw-bold">Type:</span> {{ ingredientDetails.type || "N/A" }}
+      </small>
+      <small>
+        <span class="fw-bold">Alcohol:</span>
+        {{ ingredientDetails.alcohol || "N/A" }}
+      </small>
+    </div>
   </div>
-  <div
-    class="card-footer d-flex gap-5 justify-content-evenly"
-    *ngIf="ingredientDetails.type || ingredientDetails.alcohol"
-  >
-    <small>
-      <span class="fw-bold">Type:</span> {{ ingredientDetails.type || "N/A" }}
-    </small>
-    <small>
-      <span class="fw-bold">Alcohol:</span>
-      {{ ingredientDetails.alcohol || "N/A" }}
-    </small>
-  </div>
-</div>
 
-<div class="my-5">
-  <p class="text-muted">{{ drinks.length }} drinks found</p>
+  <div class="my-5">
+    <p class="text-muted">{{ drinks.length }} drinks found</p>
+  </div>
 </div>
 
 <app-drink-list [drinks]="drinks"></app-drink-list>
