Clear local storage on navbar navigation

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-light bg-light py-3 mb-5">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">CocktailDB API</a>
+    <a class="navbar-brand" href="/" (click)="clearLocalStorage()"
+      >CocktailDB API</a
+    >
 
     <a class="btn btn-primary btn-lg" routerLink="/search">Search</a>
   </div>
